--- a/DemoAppSolanaWalletAdapterKit/Info.plist
+++ b/DemoAppSolanaWalletAdapterKit/Info.plist
@@ -2,24 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>CFBundleURLName</key>
+			<string>DemoAppSolanaWalletAdapterKitCallback</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>demoappsolanawalletadapterkitcallback</string>
+			</array>
+		</dict>
+	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>solflare</string>
 		<string>phantom</string>
 		<string>backpack</string>
-	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>myappcryptocallback</string>
-			</array>
-			<key>CFBundleURLName</key>
-			<string>DemoCryptoApp</string>
-		</dict>
 	</array>
 </dict>
 </plist>
