stupid xcode had to spend 2 hours adding paths to swiftcompat libraries, everything is working on this commit now, will try agentically building demo app with agno

--- a/TestHost/Info.plist
+++ b/TestHost/Info.plist
@@ -8,7 +8,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.demoApp.testhost</string>
+			<string>TestHost</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>solanaMWADemoTest</string>
